fix text/background colours to improve readability

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,19 @@
 * {
   margin: 0;
   padding: 0;
+  color: white;
 }
 
 button {
-  background-color: #c2c9e0;
+  background-color: #635215;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 0.5rem;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #888;
+  background-color: #a79e23;
 }
 
 .container {
@@ -85,16 +86,18 @@ button:hover {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #152663;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
   width: 30%;
+}
+
+input, textarea, select, option {
+  color: black;
 }
 
 .modal-content p {
@@ -105,7 +108,7 @@ button:hover {
 #closeEditProjModal,
 #closeAddTaskModalSpan,
 #closeEditTaskModalSpan {
-  color: #aaa;
+  color: white;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -135,7 +138,7 @@ button:hover {
   display: flex;
   justify-content: space-between;
   /* align-items: center; */
-  background-color: #c2c9e0;
+  background-color: #262626;
 }
 
 div.task:hover {
